--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,7 +12,7 @@
   --footer-link: #c09580;
   --nav-link: #23527c;
   --nav-link-hover: #0056b3;
-  --sidebar-fg: #23527c;
+  --sidebar-fg: #1c4878;
   --sidebar-fg-hover: #0056b3;
   --button-hover-bg: #ddffcc;
   --button-disabled-bg: #f2f2f2;
@@ -48,7 +48,7 @@
   --placeholder: #e8e8e8;
   --table-bg: #1c1c1c;
   --table-row-alt-bg: #232f33;
-  --table-border: #3a3a3a;
+  --table-border: #6b6b6b;
   --dialog-bg: #1f1f1f;
   --dialog-fg: #e8e8e8;
   --input-bg: #1a1a1a;
